# hop

./: .f12  .gitignore  CLAUDE.md  README.md  config.toml.example  prek.toml  pyproject.toml
.claude/: CLAUDE.md  context.md
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: PLAYBOOK.md  demo.tape  keycaps.py  make_repo.py
docs/: DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PYTEST.md  REQUIREMENTS.md  TESTING.md  TEST_CLASSIFICATION.md
src/hop/: __init__.py  config.py  git.py  main.py  theme.py  ui.py
tests/: conftest.py  fakes.py  test_cli.py  test_config.py  test_git.py  test_main.py  test_theme.py  test_ui.py
