[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hop"
version = "0.1.0"
description = "Helper for quick git branch hopping."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Lars Michelsen", email = "lm@larsmichelsen.com" }]
dependencies = [
    "textual>=6.5.0",
]

[project.urls]
Repository = "https://github.com/LarsMichelsen/hop"

[project.scripts]
hop = "hop.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
# Kill any test that runs far longer than the slowest real test (~1.2s locally),
# with generous headroom for slower CI runners. Catches hangs and dumps the
# offending test's stack instead of blocking the run indefinitely.
timeout = 30
addopts = "--cov=hop --cov-report=term-missing --cov-report=term:skip-covered --cov-fail-under=75"

[tool.coverage.run]
source = ["src/hop"]
branch = true
omit = []

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.$",  # ellipsis-only lines (Protocol method stubs)
]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "prek>=0.4.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.4",
]
